# ADuCM302x

./: Cargo.toml  README.md  device.x
src/: adc0.rs  beep0.rs  busm0.rs  clkg0_clk.rs  clkg0_osc.rs  crc0.rs  crypt0.rs  dma0.rs  flcc0.rs  flcc0_cache.rs  gpio0.rs  i2c0.rs  lib.rs  nvic0.rs  pmg0.rs  pmg0_tst.rs  rng0.rs  rtc0.rs  spi0.rs  sport0.rs  sys.rs  tmr0.rs  uart0.rs  wdt0.rs  xint0.rs
src/adc0/: alert.rs  avg_cfg.rs  bat_out.rs  cal_word.rs  cfg.rs  cfg1.rs  ch0_out.rs  ch1_out.rs  ch2_out.rs  ch3_out.rs  ch4_out.rs  ch5_out.rs  ch6_out.rs  ch7_out.rs  cnv_cfg.rs  cnv_time.rs  dma_out.rs  hys0.rs  hys1.rs  hys2.rs  hys3.rs  irq_en.rs  lim0_hi.rs  lim0_lo.rs  lim1_hi.rs  lim1_lo.rs  lim2_hi.rs  lim2_lo.rs  lim3_hi.rs  lim3_lo.rs  ovf.rs  pwrup.rs  stat.rs  tmp2_out.rs  tmp_out.rs
src/beep0/: cfg.rs  stat.rs  tonea.rs  toneb.rs
src/busm0/: arbit0.rs  arbit1.rs  arbit2.rs  arbit3.rs
src/clkg0_clk/: ctl0.rs  ctl1.rs  ctl3.rs  ctl5.rs  stat0.rs
src/clkg0_osc/: ctl.rs  key.rs
src/crc0/: ctl.rs  ipbits.rs  ipbyte.rs  ipdata.rs  poly.rs  result.rs
src/crypt0/: aeskey0.rs  aeskey1.rs  aeskey2.rs  aeskey3.rs  aeskey4.rs  aeskey5.rs  aeskey6.rs  aeskey7.rs  ccm_num_valid_bytes.rs  cfg.rs  cntrinit.rs  datalen.rs  inbuf.rs  inten.rs  nonce0.rs  nonce1.rs  nonce2.rs  nonce3.rs  outbuf.rs  prefixlen.rs  sha_last_word.rs  shah0.rs  shah1.rs  shah2.rs  shah3.rs  shah4.rs  shah5.rs  shah6.rs  shah7.rs  stat.rs
src/dma0/: adbptr.rs  alt_clr.rs  alt_set.rs  bs_clr.rs  bs_set.rs  cfg.rs  dstaddr_clr.rs  dstaddr_set.rs  en_clr.rs  (+14 more)
svd/: ADI_LICENSE.txt  README.md
(+252 files in other folders)
